# practice-msp430g2553

./: .gitignore  CMakeLists.txt  Makefile  README.md  init_packages.sh  msp430g2553.cmake
app/: general_defines.h  main.c  mcu_config.h
libs/adc/: adc.c  adc.h  adc_config.h
libs/gpio/: gpio.c  gpio.h  gpio_config.h
libs/timer/: timer.c  timer_a.h  timer_a_config.h
